[package]
name = "watchsat"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "A high-performance CDCL SAT engine with Two-Watched Literals and conflict-driven clause learning in pure Rust."
readme = "README.md"
repository = "https://github.com/ratioSolver/Consensus"
license-file = "LICENSE.txt"

[dependencies]
